<resources>
    <string name="app_name">AgenceTest</string>

    <string name="facebook_app_id">1454906531617985</string>
    <string name="fb_login_protocol_scheme">fb1454906531617985</string>
    <string name="facebook_client_token">f58cb6d638dc767dedb030c370f2fa56</string>

    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="Add">Añadir</string>
    <string name="cancel">Cancelar</string>
    <string name="AddtoCar">Añadir al Carrito</string>
    <string name="AddtoCarMens">Esta seguro de agregar el producto</string>
    <string name="detail">Detalles de la Orden</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_misProductos">Mis Productos</string>
    <string name="menu_config">Configuración</string>
    <string name="menu_session">Cerrar Session</string>
    <string name="detailProduct">Detalles del Producto</string>
    <string name="errorLoginFacebook">Error en login Facebook</string>
    <string name="errorLoginGoogle">Error en login Google</string>
    <string name="gotoSetting">Ve a los ajustes y acepta los permisos</string>
    <string name="gotoSettingInfo">Para activar la localización ve a ajustes y acepta los permisos</string>
    <string name="youarein">Estas en</string>
    <string name="closeSession">Se cerro la session</string>

</resources>