<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.serproteam.agencetest.ui.Fragment.ListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_nav_home_to_detalleFragment"
            app:destination="@id/detalleFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_setting"
            app:destination="@id/nav_setting" />
        <action
            android:id="@+id/action_nav_home_to_nav_miProducts"
            app:destination="@id/nav_miProducts" />
        <action
            android:id="@+id/action_nav_home_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_miProducts"
        android:name="com.serproteam.agencetest.ui.Fragment.MyProductFragment"
        android:label="@string/menu_misProductos"
        tools:layout="@layout/fragment_my_product" >
        <action
            android:id="@+id/action_nav_miProducts_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.serproteam.agencetest.ui.Fragment.SettingFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_nav_setting_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/detalleFragment"
        android:name="com.serproteam.agencetest.ui.Fragment.DetalleFragment"
        android:label="@string/detailProduct"
        tools:layout="@layout/fragment_detalle" >
        <action
            android:id="@+id/action_detalleFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.serproteam.agencetest.ui.Fragment.PerfilFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_perfil" >

        <action
            android:id="@+id/action_nav_profile_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>



</navigation>